// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Webhook Create should build proper events tree 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Webhooks",
      "to": "/webhooks",
    }
  }
  empty={Object {}}
  title="Create Webhook"
>
  <Panel>
    <Panel.Section>
      <Connect(ReduxForm)
        eventsTree={
          Array [
            Object {
              "description": "desc for key 1",
              "events": Array [
                Object {
                  "description": "desc for event 1",
                  "key": "event1",
                  "label": "Event 1",
                },
                Object {
                  "description": "desc for event 2",
                  "key": "event2",
                  "label": "Event 2",
                },
              ],
              "key": "key1",
              "label": "Key 1",
            },
            Object {
              "description": "desc for key 2",
              "events": Array [
                Object {
                  "description": "desc for event 3",
                  "key": "event3",
                  "label": "Event 3",
                },
                Object {
                  "description": "desc for event 4",
                  "key": "event4",
                  "label": "Event 4",
                },
              ],
              "key": "key2",
              "label": "Key 2",
            },
          ]
        }
        newWebhook={true}
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
</Page>
`;

exports[`Page: Webhook Create should render happy path 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Webhooks",
      "to": "/webhooks",
    }
  }
  empty={Object {}}
  title="Create Webhook"
>
  <Panel>
    <Panel.Section>
      <Connect(ReduxForm)
        eventsTree={Array []}
        newWebhook={true}
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
</Page>
`;

exports[`Page: Webhook Create should show loading component while events are loading 1`] = `<Loading />`;
